--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
-    "firebase": "^12.2.1",
+    "firebase": "^12.3.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-firebase-hooks": "^5.1.1",
     "react-router-dom": "^7.8.2",
     "tailwindcss": "^4.1.11"
   },
