--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,1 +1,32 @@
 
+on:
+  push:
+    branches:
+      - main
+name: Deploy website on push
+# on push to `main` branch, deploy changes via FTP
+jobs:
+  web-deploy:
+    name: Deploy
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout latest code
+        uses: actions/checkout@v2.3.2
+      - name: Setup NodeJS
+        uses: actions/setup-node@v3
+        with:
+          node-version: latest
+      - name: Install build dependencies
+        run: npm install
+      - name: Build website
+        run: npm run build
+      - name: Deploy to SFTP server
+        uses: wangyucode/sftp-upload-action@v2.0.4
+        with:
+          host: "virginia.clubrunning.org"
+          port: 22
+          username: "virginia_run"
+          password: ${{ secrets.FTP_PASSWORD }}
+          forceUpload: false
+          localDir: "./dist"
+          remoteDir: "./virginia.clubrunning.org/"
