--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@
 on:
   push:
     branches:
-      - main
+      - master
 name: Deploy website on push
 # on push to `main` branch, deploy changes via FTP
 jobs:
