--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,38 +1,94 @@
+# on:
+#   push:
+#     branches:
+#       - master
+
+# name: Deploy website on push
+
+# jobs:
+#   web-deploy:
+#     name: Deploy
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: Checkout latest code
+#         uses: actions/checkout@v2.3.2
+
+#       - name: Setup NodeJS
+#         uses: actions/setup-node@v3
+#         with:
+#           node-version: latest
+
+#       - name: Install build dependencies
+#         run: npm install
+
+#       - name: Build website
+#         run: npm run build
+
+#       - name: Copy .htaccess into dist
+#         run: cp .htaccess dist/.htaccess
+
+#       - name: Deploy to DreamHost via SFTP
+#         uses: pressidium/sftp-deploy-action@v1.0.4
+#         with:
+#           server: "virginia.clubrunning.org"
+#           username: "virginia_run"
+#           password: ${{ secrets.FTP_PASSWORD }}
+#           local_path: "./dist"
+#           remote_path: "./virginia.clubrunning.org"
+#           delete: false
+name: Deploy via SFTP
+
 on:
   push:
     branches:
       - master
 
-name: Deploy website on push
-
 jobs:
-  web-deploy:
+  deploy:
     name: Deploy
     runs-on: ubuntu-latest
-    steps:
-      - name: Checkout latest code
-        uses: actions/checkout@v2.3.2
 
-      - name: Setup NodeJS
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+
+      - name: Setup Node
         uses: actions/setup-node@v3
         with:
-          node-version: latest
+          node-version: 20
 
-      - name: Install build dependencies
+      - name: Install dependencies
         run: npm install
 
-      - name: Build website
+      - name: Build site
         run: npm run build
 
       - name: Copy .htaccess into dist
         run: cp .htaccess dist/.htaccess
 
-      - name: Deploy to DreamHost via SFTP
-        uses: pressidium/sftp-deploy-action@v1.0.4
+      - name: Deploy files via SFTP
+        uses: pressidium/lftp-mirror-action@v1
         with:
-          server: "virginia.clubrunning.org"
-          username: "virginia_run"
-          password: ${{ secrets.FTP_PASSWORD }}
-          local_path: "./dist"
-          remote_path: "./virginia.clubrunning.org"
-          delete: false
+          host: "virginia.clubrunning.org"
+          port: 22
+          user: "virginia_run"
+          pass: ${{ secrets.FTP_PASSWORD }}
+
+          # Upload settings
+          onlyNewer: true
+          settings: 'sftp:auto-confirm=yes'
+
+          # Deploy built files
+          localDir: './dist'
+          remoteDir: './virginia.clubrunning.org/'
+
+          # Mirror direction: local → remote
+          reverse: true
+
+          # Don’t skip dotfiles (important for .htaccess)
+          options: '--verbose --include-glob=.*'
+
+          # Optional ignore file (omit if not needed)
+          # ignoreFile: '.lftp_ignore'
