--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -51,6 +51,17 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
+    
+      - name: Setup NodeJS
+        uses: actions/setup-node@v3
+        with:
+          node-version: latest
+
+      - name: Install build dependencies
+        run: npm install
+
+      - name: Build website
+        run: npm run build
 
       - name: Deploy files via SFTP
         uses: pressidium/lftp-mirror-action@v1
